[project]
name = "mcp-code-server"
version = "0.1.0"
description = "MCP Code Server para análisis de código con Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]